--- a/src/main/resources/templates/agregarMovimiento.html
+++ b/src/main/resources/templates/agregarMovimiento.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <title>Inicio</title>
+  </head>
+<body>
+<!-- Inicio de contenedor principal -->
+<div class="text-center">
+  <!-- Inicio de fila principal -->
+  <div class="row">
+    <!-- Inicio de panel de la izquierda -->
+    <div class="col-3 align-items-center" style="background-color:#aaa; height: 100vh">
+      <!--espacio para logo -->
+      <div class="text-center pt-5 pb-5" style="height: 300px"><img src="img/logo.png" class="rounded"></div>
+      <!--espacio para botones del panel izquierdo-->
+      <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerMovimientos}" class="btn btn-dark">Ingresos y Egresos</a></div>
+      <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerEmpleados}" class="btn btn-dark">Usuarios</a></div>
+      <div class="text-center ps-3 pb-5 d-grid gap-2"><a th:href="@{/VerEmpresas}" class="btn btn-dark">Empresas</a></div>
+    </div>
+    <!-- Final de panel de la izquierda -->
+    <!-- Inicio espacio de la derecha -->
+    <div class="col-9 align-items-center" style="background-color:white; height: 100vh">
   <title>Agregar nuevo Movimiento - Ciclo3</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +44,9 @@
 
 <div class="container">
   <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p><br>
-  <button type="button" class="btn btn-danger" style="float:right"><a th:href="@{/logout}">Cerrar Sesión</a></button>
+  <form style="float:right" th:action="@{/doLogout}" method="post">
+    <input type="submit" value="Cerrar sesión" />
+  </form>
 
   <h1> Agregue aqui los datos del Movimiento</h1>
   <br>
@@ -67,18 +92,6 @@
         </div>
       </div>
     </div>
-
-    <!--Campo para fecha-->
-    <div class="row">
-      <div class="form-group col-md-12">
-        <label class="col-md-3" for="fecha">Fecha del movimiento:</label>
-        <div class="col-md-6">
-          <input type="date" th:field="*{fecha}" class="form-control" id="fecha" required="required" readonly></div>
-      </div>
-    </div>
-
-
-
 
     <!--Boton para enviar todo y ejecutar accion -->
     <div class="row">
