--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Inicio</title>
 </head>
 <body>
 <!-- Inicio de contenedor principal -->
-<div class="text-center">
+<div class="container-fluid text-center">
     <!-- Inicio de fila principal -->
     <div class="row">
         <!-- Inicio de panel de la izquierda -->
@@ -18,11 +19,18 @@
             <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerMovimientos}" class="btn btn-dark">Ingresos y Egresos</a></div>
             <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerEmpleados}" class="btn btn-dark">Usuarios</a></div>
             <div class="text-center ps-3 pb-5 d-grid gap-2"><a th:href="@{/VerEmpresas}" class="btn btn-dark">Empresas</a></div>
-            <div class="text-center ps-3 pt-5 pb-3 d-grid gap-2"><a th:href="@{/logout}" class="btn btn-danger">Cerrar sesión</a></div>
+
+
         </div>
         <!-- Final de panel de la izquierda -->
         <!-- Inicio espacio de la derecha -->
-        <div class="col-9 align-items-center" style="background-color:#ccc; height: 100vh">
+
+        <div class="col-9 align-items-center" style="background-color:#ddd; height: 120vh">
+            <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
+
+            <form style="float:right" th:action="@{/doLogout}" method="post">
+                <input type="submit" value="Cerrar sesión" />
+            </form>
             <h1 class="pt-5 pb-4">Categorias</h1>
             <!-- Inicio de las categorias -->
             <div class="row row-cols-1 row-cols-md-3 g-2 pt-5">
