--- a/src/main/resources/templates/verEmpleados.html
+++ b/src/main/resources/templates/verEmpleados.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Inicio</title>
 </head>
@@ -18,11 +19,13 @@
             <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerMovimientos}" class="btn btn-dark">Ingresos y Egresos</a></div>
             <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerEmpleados}" class="btn btn-dark">Usuarios</a></div>
             <div class="text-center ps-3 pb-5 d-grid gap-2"><a th:href="@{/VerEmpresas}" class="btn btn-dark">Empresas</a></div>
-            <div class="text-center ps-3 pt-5 pb-3 d-grid gap-2"><a th:href="@{/logout}" class="btn btn-danger">Cerrar sesión</a></div>
+            <div class="text-center ps-3 pt-5 pb-3 d-grid gap-2">
+
+            </div>
         </div>
         <!-- Final de panel de la izquierda -->
         <!-- Inicio espacio de la derecha -->
-        <div class="col-9 align-items-center" style="background-color:#ccc; height: 100vh">
+        <div class="col-9 align-items-center" style="background-color:white; height: 100vh">
             <head>
                 <meta charset="utf-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,7 +48,10 @@
 
             <div class="container">
                 <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
-                <button type="button" class="btn btn-danger" style="float:right"><a th:href="@{/logout}">Cerrar Sesión</a></button>
+
+                <form  style="float:right" th:action="@{/doLogout}" method="post">
+                    <input type="submit" value="Cerrar sesión" />
+                </form>
 
                 <h1> Lista de Empleados</h1>
                 <!--Dibujamos la tabla-->
@@ -57,6 +63,8 @@
                     <th>Empresa</th>
                     <th>Rol</th>
                     <th>Estado</th>
+                    <th>Fecha de Creación</th>
+                    <th>Fecha de Actualización</th>
                     <th>Movimientos</th>
                     <th>Editar</th>
                     <th>Eliminar</th>
@@ -73,6 +81,8 @@
                     <td th:if="${empleado.rol=='ROLE_USER'}">Operativo</td>
                     <td th:if="${empleado.estado==true}">Activo</td>
                     <td th:if="${empleado.estado==false}">Inactivo</td>
+                    <td th:text="${empleado.fechaCreacion}"></td>
+                    <td th:text="${empleado.fechaActualizacion}"></td>
                     <td><button type="button" class="btn btn-dark"><a th:href="@{/Empleado/{id}/Movimientos(id=${empleado.id})}">Ver</a></button></td>
                     <td><button type="button" class="btn btn-dark"><a th:href="@{/EditarEmpleado/{id}(id=${empleado.id})}">Editar</a></button></td>
                     <td><button type="button" class="btn btn-danger"><a th:href="@{/EliminarEmpleado/{id}(id=${empleado.id})}">Eliminar</a></button></td>
