--- a/src/main/resources/templates/verMovimientos.html
+++ b/src/main/resources/templates/verMovimientos.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
   <title>Inicio</title>
 </head>
@@ -18,11 +19,10 @@
       <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerMovimientos}" class="btn btn-dark">Ingresos y Egresos</a></div>
       <div class="text-center ps-3 pb-3 d-grid gap-2"><a th:href="@{/VerEmpleados}" class="btn btn-dark">Usuarios</a></div>
       <div class="text-center ps-3 pb-5 d-grid gap-2"><a th:href="@{/VerEmpresas}" class="btn btn-dark">Empresas</a></div>
-      <div class="text-center ps-3 pt-5 pb-3 d-grid gap-2"><a th:href="@{/logout}" class="btn btn-danger">Cerrar sesión</a></div>
     </div>
     <!-- Final de panel de la izquierda -->
     <!-- Inicio espacio de la derecha -->
-    <div class="col-9 align-items-center" style="background-color:#ccc; height: 100vh">
+    <div class="col-9 align-items-center" style="background-color:white; height: 100vh">
       <head>
         <title>Lista de Movimientos</title>
         <meta charset="utf-8">
@@ -46,8 +46,10 @@
 
       <div class="container">
         <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
-        <button type="button" class="btn btn-danger" style="float:right"><a th:href="@{/logout}">Cerrar Sesión</a></button>
 
+        <form  style="float:right" th:action="@{/doLogout}" method="post">
+          <input type="submit" value="Cerrar sesión" />
+        </form>
         <h1> Lista de Movimientos</h1>
         <!--Dibujamos la tabla-->
         <br><table class="table table-bordered">
@@ -56,7 +58,8 @@
           <th class="text-right">Valor</th>
           <th>Concepto</th>
           <th>Usuario Responsable</th>
-          <th>Fecha del Movimiento</th>
+          <th>Fecha de Creación</th>
+          <th>Fecha de Actualización</th>
           <th>Editar</th>
           <th>Eliminar</th>
         </tr>
@@ -75,7 +78,8 @@
           <td th:if="${movimiento.concepto=='7'}">Maquinaria y Equipo</td>
           <td th:if="${movimiento.concepto=='8'}">Nomina</td>
           <td th:text="${movimiento.usuario.nombre}"></td>
-          <td th:text="${#dates.format(movimiento.fecha, 'dd/MM/yyyy')}"></td>
+          <td th:text="${movimiento.fechaCreacion}"></td>
+          <td th:text="${movimiento.fechaActualizacion}"></td>
           <td><button type="button" class="btn btn-dark"><a th:href="@{/EditarMovimiento/{id}(id=${movimiento.id})}">Editar</a></button></td>
           <td><button type="button" class="btn btn-danger"><a th:href="@{/EliminarMovimiento/{id}(id=${movimiento.id})}">Eliminar</a></button></td>
         </tr>
