Agregado icono y logo a los HTML

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="icon" th:href="@{/img/icono.png}">
     <title>Ciclo3</title>
 
     <!--JQUERY-->
