--- a/src/main/resources/templates/accessDenied.html
+++ b/src/main/resources/templates/accessDenied.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
+
+  
+  <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1, user-scalable=no">
-  <title>Acceso Denegado</title>
+    <meta charset="UTF-8">
+    <title>Acceso Denegado</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+
 </head>
-<body>
-<h1>No tienes acceso a esta area</h1>
+<div class="px-4 py-5 my-5 text-center">
+
+    <h1>No tienes permisos para esta tarea</h1>
+    <br>
+    <br>
+    <a href="javascript: history.go(-1)" class="btn btn-info" role="button">Atras</a>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
+
