Configuración de oauth2

--- a/src/main/resources/templates/editarEmpleado.html
+++ b/src/main/resources/templates/editarEmpleado.html
@@ -44,7 +44,7 @@
 
 <div class="container">
     <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
-    <form style="float:right" th:action="@{/doLogout}" method="post">
+    <form style="float:right" th:action="@{/logout}" method="post">
         <input type="submit" value="Cerrar sesión" />
     </form>
     <h1> Actualice aqui los datos del Empleado</h1>
