--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -10,7 +10,7 @@ body{
 }
 
 .modal-content{
-    background-color: #3b4652;
+    background-color: #ffffff;
     opacity: .85;
     padding: 0 20px;
     box-shadow: 0px 0px 3px #848484;
