--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -29,7 +29,7 @@
         <div class="col-9 align-items-center" style="background-color:#ddd; height: 120vh">
             <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
 
-            <form style="float:right" th:action="@{/doLogout}" method="post">
+            <form style="float:right" th:action="@{/logout}" method="post">
                 <input type="submit" value="Cerrar sesión" />
             </form>
             <h1 class="pt-5 pb-4">Categorias</h1>
