--- a/src/main/resources/templates/verMovimientos.html
+++ b/src/main/resources/templates/verMovimientos.html
@@ -48,7 +48,7 @@
       <div class="container">
         <p th:inline="text" class="text-right">User: [[${#httpServletRequest.remoteUser}]]</p>
 
-        <form  style="float:right" th:action="@{/doLogout}" method="post">
+        <form  style="float:right" th:action="@{/logout}" method="post">
           <input type="submit" value="Cerrar sesión" />
         </form>
         <h1> Lista de Movimientos</h1>
@@ -146,4 +146,5 @@
       </script>
 
       </body>
+    </div>
 </html>
